3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix bug #744327 ('immortal' monsters): Prevent monsters from loosing hp or sp
if they have negative Con/Pow. For hp, this made some monsters unkillable
because they eventually had negative hp.
--
server/monster.c: In move_monster() do gain hp/sp only if Con/Pow is positive.
Andreas Kirschbaum 2005-09-24

Update client inventory view for players dieing in a shop with unpaid items in
inventory.
--
server/player.c: Send removed item to client in remove_unpaid_objects(). Do
   not call remove_unpaid_objects() multiple times in kill_player().
Andreas Kirschbaum 2005-09-17

Allow directors/movers to specify a specific arch/name/race.
include/sproto.h: Add should_director_abort to here.
server/{apply.c, time.c}: Add should_director_abort for the logic code
    for this change, and add checks for it in director/mover code.
doc/Developers/objects: Add documentation for directors including this
    change, and update mover documentation.
Alex Schultz 2005-09-15

Make untriggered TIMED_GATEs work again.
server/apply.c: Clear object speed only for connected objects.
Andreas Kirschbaum 2005-09-13

This change is mostly cosmetic and a preparation for the new movement
type code.  Basically, it just changes the old object movement_type
field to attack_movement.  This makes sense because that is what that
field is called in saved and loaded objects/archetypes, and thus
frees up that name for the new movement code.
--
common/button.c: field name change
common/loader.{cl}: field name change
doc/Developers/objects: Add section on new movement types, update old
   documentation to note it is attack_movement and not movement_type