@@ -1579,7 +1579,7 @@ int kill_object(object *op,int dam, object *hitter, int type)
 	 */
 	if (battleg) exp = 0;
 
-	if(owner->type!=PLAYER || owner->contr->party_number<=0) {
+	if(owner->type!=PLAYER || owner->contr->party==NULL) {
 	    change_exp(owner,exp, skill, 0);
 	}
 	else {
@@ -1587,12 +1587,12 @@ int kill_object(object *op,int dam, object *hitter, int type)
 
 	    player *pl;
 
-	    int no=owner->contr->party_number;
+	    int no=owner->contr->party->partyid;
 #ifdef PARTY_KILL_LOG
 	    add_kill_to_party(no,query_name(owner),query_name(op),exp);
 #endif
 	    for(pl=first_player;pl!=NULL;pl=pl->next) {
-		if(pl->ob->contr->party_number==no && on_same_map(pl->ob, owner)) {
+		if(pl->ob->contr->party->partyid==no && on_same_map(pl->ob, owner)) {
 		    count++;
 		    shares+=(pl->ob->level+4);
 		}
@@ -1602,7 +1602,7 @@ int kill_object(object *op,int dam, object *hitter, int type)
 	    else {
 		int share=exp/shares,given=0,nexp;
 		for(pl=first_player;pl!=NULL;pl=pl->next) {
-		    if(pl->ob->contr->party_number==no && on_same_map(pl->ob, owner)) {
+		    if(pl->ob->contr->party->partyid==no && on_same_map(pl->ob, owner)) {
 			nexp=(pl->ob->level+4)*share;
 			change_exp(pl->ob,nexp, skill, SK_EXP_TOTAL);
 			given+=nexp;
